--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -34,6 +34,7 @@ ENV GRAPH_LOG ""
 ENV EARLY_LOG_CHUNK_SIZE ""
 ENV ETHEREUM_RPC_PARALLEL_REQUESTS ""
 ENV ETHEREUM_BLOCK_CHUNK_SIZE ""
+ENV GRAPH_ETH_CALL_BY_NUMBER "" 
 
 ENV postgres_host ""
 ENV postgres_user ""
